samples/_failures_safe/1761703540_8be88f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ef4a276.c: In function ‘display_high_severity’:
./samples/SAFE/__tmp_9ef4a276.c:128:5: error: expected expression at end of input
  128 |     for (
      |     ^~~
./samples/SAFE/__tmp_9ef4a276.c:128:5: error: expected declaration or statement at end of input
